<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.tytusquiz.Question1Activity">

    <RelativeLayout
        android:id="@+id/activity_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img_1_tip"
            android:src="@drawable/img_q01" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/question1_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/mr_monkey_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mr_monkey" />

            <RadioButton
                android:id="@+id/tytus_de_zoo_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tytus_de_zoo" />

            <RadioButton
                android:id="@+id/atomek_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atomek" />

            <RadioButton
                android:id="@+id/tytus_z_zoo_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tytus_z_zoo" />
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/button_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@id/question1_answers">

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="nextQuestion"
                android:text="@string/next_question" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_section"
            android:max="5"
            android:progress="1" />
    </RelativeLayout>
</ScrollView>