<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_quiz_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.tytusquiz.QuizReviewActivity">

        <ImageView
            android:id="@+id/image_review"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/img_review"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/tytus_romek_and_atomek" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_text_view"
            android:layout_below="@id/image_review"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/review_text_view"
            android:layout_below="@id/score_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/send_review_button"
            android:onClick="sendMail"
            android:text="@string/send_review" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/send_review_button"
            android:id="@+id/again_button"
            android:layout_centerHorizontal="true"
            android:onClick="again"
            android:text="@string/again" />



    </RelativeLayout>
</ScrollView>