<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.tytusquiz.Question3Activity">

    <RelativeLayout
        android:id="@+id/activity_question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img_3_tip"
            android:src="@drawable/img_q03" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:text="@string/question3" />

        <TextView
            android:id="@+id/question_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:layout_centerHorizontal="true"
            android:text="@string/question3_tip" />


        <LinearLayout
            android:id="@+id/question1_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_hint"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/tomasz_lew_lesniak_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tomasz Lew Leśniak" />

                <CheckBox
                    android:id="@+id/scott_adams_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Scott Adams" />

                <CheckBox
                    android:id="@+id/ha_ga_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ha-Ga" />

                <CheckBox
                    android:id="@+id/jean_jacques_sempe_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jean-Jacques Sempé" />

                <CheckBox
                    android:id="@+id/henryk_jerzy_chmielewski_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Henryk Jerzy Chmielewski" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/rene_goscinny_check_Box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="René Goscinny" />

                <CheckBox
                    android:id="@+id/janusz_christa_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Janusz Christa" />

                <CheckBox
                    android:id="@+id/papcio_chmiel_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Papcio Chmiel" />

                <CheckBox
                    android:id="@+id/agata_nowicka_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agata Nowicka" />

                <CheckBox
                    android:id="@+id/rafal_skarzycki_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rafał Skarżycki" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/button_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question1_answers"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:onClick="previousQuestion"
                android:text="@string/previous_question" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="nextQuestion"
                android:text="@string/next_question" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_section"
            android:max="5"
            android:progress="3" />

    </RelativeLayout>
</ScrollView>
